# Shougoutaku

./: .gitignore  Cargo.toml  LICENSE  README.md
data/capture/btcusdt/1702798595534677/: ask_trade.txt  bid_trade.txt  depth.txt  snapshot.txt
data/capture/btcusdt/1702970588517503/: ask_trade.txt  bid_trade.txt  snapshot.txt
scripts/: capture-depth-trades.py  message-viewer.py  plot-orderbook.py
src/: http_client.rs  messages.rs  orderbook.rs  saifutaku_backtester.rs  saifutaku_config.rs  saifutaku_livetester.rs  shougoutaku.rs  trade_matcher.rs  websocket_client.rs
